--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2>天神協会 &#160;<a href="https://www.instagram.com/phenomsociety/"><img src="images/igsmall.png" width="3%""></a>&#160;<a href="https://www.facebook.com/phenomsociety"><img src="images/fbsmall.jpg" width="3%""></a></h2>
       <div class="carphotos">
         <a href='#'><img src="images/ps/23.jpg"></a><br>
-        <a href='#'><img src="images/ps/37.jpg"></a><br>
+        <a href='#'><img src="images/ps/37.JPG"></a><br>
         <a href='#'><img src="images/ps/ps3.jpg"></a><br>
         <a href='#'><img src="images/ps/ps7.jpg"></a><br>
         <a href='#'><img src="images/ps/ps9.jpg"></a><br>
