--- a/jdm.html
+++ b/jdm.html
@@ -21,7 +21,7 @@
     <h2>天神協会 &#160;<a href="https://www.instagram.com/phenomsociety/"><img src="images/igsmall.png" width="3%""></a>&#160;<a href="https://www.facebook.com/phenomsociety"><img src="images/fbsmall.jpg" width="3%""></a></h2>
     <p> COMING SOON....</p>
     <div class="merch">
-      <a href="#"><img src="images/phenomshirt.png"></a><br>
+      <a href="#"><img src="images/Phenomshirt.png"></a><br>
 </div>
 
   </main>
