--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <h3><i>Meet the crew...</i></h3>
 
         <div class="about">
-          <a href="#"><img src="images/ps/psfam.png"></a><br>
+          <a href="#"><img src="images/ps/PSfam.png"></a><br>
           <p><a href="https://www.instagram.com/fuckjoce/"><img src="images/igsmall.png" width="4%">FuckJoce</a><br>
             2004 Nissan Skyline 350GT</p>
             <a href="#"><img src="images/ps/ps15.jpg"></a><br>
