--- a/jdm.html
+++ b/jdm.html
@@ -26,8 +26,9 @@
 
   </main>
   <footer>
-        Copyright &copy; 2016 Jose Cisneros<br>
-        <a href="mailto:Jose@Cisneros.com">Jose@Cisneros.com</a>
+          <!--<img src="images/ps/phenomsmall.jpg" alt="PhenomSociety" width="100px" height="45px"/>
+          --><div><font size="1">Copyright &copy; 2017 JMNY All Rights Reserved<br>
+          <a href="mailto:JoseCisneros.jr@gmail.com">Contact JMNY</a></font>
   </footer>
   </div>
 </body>
