--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
         <a href='#'><img src="images/ps/19.jpg"></a><br>
         <a href='#'><img src="images/ps/22.jpg"></a><br>
         <a href='#'><img src="images/ps/26.png"></a><br>
-        <a href='#'><img src="images/ps/"></a><br>
           </div>
 
   <!--<div><iframe width="100%" height="0" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/283267677&amp;color=000000&amp;auto_play=true&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false"></iframe></div>
 --></main>
   <footer>
-          <img src="images/ps/phenomsmall.jpg" alt="PhenomSociety" width="100px" height="45px"/>
-          <div><font size="1">Copyright &copy; 2017 JMNY All Rights Reserved<br>
+          <!--<img src="images/ps/phenomsmall.jpg" alt="PhenomSociety" width="100px" height="45px"/>
+          --><div><font size="1">Copyright &copy; 2017 JMNY All Rights Reserved<br>
           <a href="mailto:JoseCisneros.jr@gmail.com">Contact JMNY</a></font>
   </footer>
   </div>
