--- a/index.html
+++ b/index.html
@@ -47,6 +47,15 @@
           <!--<img src="images/ps/phenomsmall.jpg" alt="PhenomSociety" width="100px" height="45px"/>
           --><div><font size="1">Copyright &copy; 2017 JMNY All Rights Reserved<br>
           <a href="mailto:JoseCisneros.jr@gmail.com">Contact JMNY</a></font>
+          <!-- hitwebcounter Code START -->
+<a href="http://www.hitwebcounter.com" target="_blank">
+<img src="http://hitwebcounter.com/counter/counter.php?page=6711687&style=0007&nbdigits=5&type=page&initCount=0" title="install tracking codes" Alt="install tracking codes"   border="0" >
+</a>                                        <br/>
+                                        <!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com" title="Visitors Total"
+                                        target="_blank" style="font-family: Geneva, Arial, Helvetica;
+                                        font-size: 9px; color: #9C9795; text-decoration: none ;"><strong>Visitors Total                                        </strong>
+                                        </a>
+                            
   </footer>
   </div>
 </body>
