--- a/index.html
+++ b/index.html
@@ -51,11 +51,8 @@
 <a href="http://www.hitwebcounter.com" target="_blank">
 <img src="http://hitwebcounter.com/counter/counter.php?page=6711687&style=0007&nbdigits=5&type=page&initCount=0" title="install tracking codes" Alt="install tracking codes"   border="0" >
 </a>                                        <br/>
-                                        <!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com" title="Visitors Total"
-                                        target="_blank" style="font-family: Geneva, Arial, Helvetica;
-                                        font-size: 9px; color: #9C9795; text-decoration: none ;"><strong>Visitors Total                                        </strong>
-                                        </a>
-                            
+                                        <!-- hitwebcounter.com -->
+
   </footer>
   </div>
 </body>
