--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
   <header>
       <h1><a href="index.html"><img src="phenomsociety.jpg" alt="PhenomSociety" width="90%" height="100%"/></a></h1>
   </header>
+<nav class="second">
+  <h2>天神協会 &#160;<a href="https://www.instagram.com/phenomsociety/"><img src="images/igsmall.png" width="3%""></a>&#160;<a href="https://www.facebook.com/phenomsociety"><img src="images/fbsmall.jpg" width="3%""></a></h2>
 
+
+</nav>
   <nav>
     <a href="index.html">HOME</a>
     <a href="about.html">THE CREW</a>
